# slices

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  Taskfile_linux.yml  build_requirements.txt  pyproject.toml
docker/: Dockerfile
slices/: sample_math.py
taskfiles/: Taskfile_windows.yml
unit_tests/: test_math.py
